# Fastapi-recept

./: .dockerignore  .gitignore  Dockerfile  app.py  create user.py  db init add user.py  docker-compose.yml  main.py  pyproject.toml  readme.md  recipes.yaml  requirements.txt  romana.yaml  test.tst
auth/: auth_utils.py  jwt_utils.py
database/: database.py  models.py  schemas.py
recepts_import/: recept 60%.yaml  recept hoofddeeg.yaml  recipes (1).yaml  recipes.yaml
routers/: admin_router.py  auth_router.py  crud_router.py  home_router.py  main_router.py  markdown_router.py  protected_router.py  recipe_router.py
templates/: 404.html  about.html  base.html  home.html  index.html.old  login_modal.html  navbar.html  navlinks.html  recipe_list.html  view_recipe.html
templates/admin/: admin.html  edit_form.html  import.html
templates/crud/: component.html  ingredients.html  main_form.html  recipe.html  recipe_list.html  step.html  steps.html
utils/: export_function.py  import_function.py  order_function.py
