[project]
name = "fastapi-recept"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.2.1",
    "fastapi>=0.123.9",
    "jinja2>=3.1.6",
    "markdown>=3.10",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
